--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,19 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "~5.2.0|~5.3.0|~5.4.0",
+    "laravel/framework": "^5.2,<5.6",
     "atehnix/vk-client": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
       "ATehnix\\LaravelVkRequester\\": "src"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "ATehnix\\LaravelVkRequester\\VkRequesterServiceProvider"
+      ]
     }
   }
 }
