--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "^5.2,<7.0",
+    "laravel/framework": "^5.2|~6.0",
     "atehnix/vk-client": "^1.0.0"
   },
   "autoload": {
